@@ -1,17 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA512
 
-DIST sphinxcontrib-blockdiag-0.8.1.tar.gz 6099 RMD160 49505a87eada590b4a28bde6585d89ebbaa769fd SHA1 c8abc66d3713e74f2e911097b0998e9c4e7105b1 SHA256 1ec616112526ca8a13de3aa686f4f8220a3b864a96b35f9585b9083308649039
 DIST sphinxcontrib-blockdiag-0.8.3.tar.gz 6221 RMD160 0972754857bab5c966ecab2235629c3d88556903 SHA1 15e188f630bf0dce5ba7052a3b1b312960149822 SHA256 424c449287d9d5c75bac8a93d790dd3acce5861a43bfa492a7287912b4c642e7
-EBUILD sphinxcontrib-blockdiag-0.8.1.ebuild 619 RMD160 f82558ec55a817a2355495967d01520939cf7452 SHA1 31b3d6d3eeb2e18d9b5e574bd0bd6321d22296cd SHA256 d89ac9e2b06da5437f8cc5fa7155785e8652c03f1a22fda485b3c8606577b23a
-EBUILD sphinxcontrib-blockdiag-0.8.3.ebuild 620 RMD160 5526244fe449c2d714e452b992134f77da71f9b9 SHA1 d8681373c3fdbbb18c09b454df812e6bd56f26cf SHA256 28a1bc78630f62f3ab4c8e3d96e901e6df62ec48b045de6c5883abefb639710a
-MISC ChangeLog 4708 RMD160 baf965b21f23e3c8ae93340029c8955fd67f84a5 SHA1 bff3c121ff32256658a3bc0f035836a8eab9441f SHA256 8920cd24e284037e650b5b5f1fba25934e1a13bbcb91d406bdc27031f5a15c54
+EBUILD sphinxcontrib-blockdiag-0.8.3.ebuild 619 RMD160 f82558ec55a817a2355495967d01520939cf7452 SHA1 31b3d6d3eeb2e18d9b5e574bd0bd6321d22296cd SHA256 d89ac9e2b06da5437f8cc5fa7155785e8652c03f1a22fda485b3c8606577b23a
+MISC ChangeLog 4850 RMD160 45462a992a64b0d6f06950b176c7388375591a07 SHA1 0c66241ee86183fb3951bb035c89e4cd15b75c4d SHA256 15651f636122c7c3bff7cf26d357626016198f75e2c059ee481e0c1aa3704b29
 MISC metadata.xml 667 RMD160 a6b5fc4a97d6ce6aceab09dbba891726864d5cb8 SHA1 74611dacf4878870366e76f80d636e068a9331ab SHA256 138b5a95f114598614b5358ebe24e70a80b2278e252d650082815c1fabdce4e7
 MISC watch 12 RMD160 93a2adec9e10f09240c494996f1b879ab1a61113 SHA1 d61fd79473fa9466604269b1d76a71d70ed24b7a SHA256 806ffafa2258c82b35917a67c5f7faff76604958adae5efb722ca9ef82ee2874
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk4VjlkACgkQzJrj3cAXR0k0+gCfTQQaxlEJuSe8m++R+LZJdtvc
-nZkAoKnPwrTh85AL1VzoQYJd93Dfr75H
-=2kb6
+iEYEAREKAAYFAk4VsvIACgkQzJrj3cAXR0kvjwCgigFH95JZSTLtL2m2sh1ZBwvL
+i40AoK8J2jZXnQOps2C3s70JtX4MtA/H
+=Rkbq
 -----END PGP SIGNATURE-----
