@@ -1,27 +1,0 @@
-# Copyright 1999-2011 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: $
-
-EAPI=3
-SUPPORT_PYTHON_ABIS="1"
-PYTHON_DEPEND="2"
-# 3.x is not supported because of exception syntax.
-RESTRICT_PYTHON_ABIS="3.*"
-
-inherit jnrowe-pypi
-
-DESCRIPTION="Sphinx extension to support media-gfx/blockdiag diagrams"
-
-LICENSE="BSD"
-SLOT="0"
-KEYWORDS="amd64 x86"
-IUSE="pdf"
-
-DEPEND="dev-python/setuptools"
-# Setuptools is needed in RDEPEND for package namespacing.
-RDEPEND="${DEPEND}
-	dev-python/sphinx
-	>=media-gfx/blockdiag-0.8.0
-	pdf? ( dev-python/reportlab )"
-
-PYTHON_MODNAME="${PN/-//}.py"
